src/test/errors/operator_plus.j
class Main {

Void main(){
    Int i; Int j; String k;
    Int ir;
    String sr;
    ir = i + j;
    ir = i - j;
    ir = i + new Main();
    ir = i + null;
    sr = null + null;
    sr = null + i;
    sr = k + null;
    sr = k + "";
    sr = k + "test";
    sr = "test" + k;
    sr = j + k;
    if (i == j) {
        ir = 1 + "1";
    }
    else {
        ir = 1 + "1";
    }
    while (i == k) {
        ir = 1 
           + "1";
        ir = 1 + "1" + "2";
    }
}
}